[gd_scene load_steps=11 format=3 uid="uid://d8k17svky74p"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_jv7ag"]
[ext_resource type="Texture2D" uid="uid://dsxyjwwpsx7vk" path="res://assets/menu_buttons.png" id="2_2e0ce"]
[ext_resource type="Texture2D" uid="uid://mgav88ow3jbv" path="res://assets/menu_buttons_clicked.png" id="3_bnrmd"]
[ext_resource type="Texture2D" uid="uid://cqt21v5t4j3oy" path="res://assets/menu_buttons_hover.png" id="4_lru4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bs8u2"]
atlas = ExtResource("2_2e0ce")
region = Rect2(2, 49, 46, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v5dp"]
atlas = ExtResource("3_bnrmd")
region = Rect2(3, 50, 45, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg7qp"]
atlas = ExtResource("4_lru4x")
region = Rect2(2, 49, 46, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_uut3y"]
atlas = ExtResource("2_2e0ce")
region = Rect2(1, 82, 47, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq2mf"]
atlas = ExtResource("3_bnrmd")
region = Rect2(1, 82, 47, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie1mc"]
atlas = ExtResource("4_lru4x")
region = Rect2(1, 82, 47, 13)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jv7ag")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 0.0

[node name="Controls" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_bs8u2")
texture_pressed = SubResource("AtlasTexture_4v5dp")
texture_hover = SubResource("AtlasTexture_xg7qp")

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_uut3y")
texture_pressed = SubResource("AtlasTexture_lq2mf")
texture_hover = SubResource("AtlasTexture_ie1mc")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
